<resources>
    <string name="app_name">IMC</string>
    <string name="btnCalc">Calcular</string>
    <string name="male">Hombre</string>
    <string name="woman">Mujer</string>
    <string name="altura">Altura</string>
    <string name="peso">Peso</string>
    <string name="edad">Edad</string>
    <string name="resultado">Tu Resultado</string>
    <string name="btnReCalc">Re-Calcular</string>
    <string name="resultado_card">Normal</string>
    <string name="peso_card">20.76</string>
    <string name="peso_bajo">BAJO</string>
    <string name="peso_normal">NORMAL</string>
    <string name="peso_alto">ALTO</string>
    <string name="peso_sobrepeso">SOBREPESO</string>
    <string name="peso_bajo_s">Se encuentra dentro del rango de peso insuficiente.</string>
    <string name="peso_normal_s">Se encuentra dentro del rango de peso normal o saludable.</string>
    <string name="peso_alto_s">Se encuentra dentro del rango de sobrepeso.</string>
    <string name="peso_sobrepeso_s">Se encuentra dentro del rango de obesidad.</string>
</resources>