<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top"
    tools:context=".Resultado"
    android:background="@color/background">


    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="100dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/layaout_boton"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/txtResultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/resultado"
            android:textColor="@color/texto"
            android:textSize="40dp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            app:cardBackgroundColor="@color/azul"
            app:cardCornerRadius="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_resultado_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="40dp"
                    android:text="@string/resultado_card"
                    android:textColor="@color/background"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/txt_peso_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="40dp"
                    android:text="@string/peso_card"
                    android:textColor="@color/texto"
                    android:textSize="60sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:layout_marginTop="80dp"
                    android:text=""
                    android:textColor="@color/texto"
                    android:textSize="26sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/layaout_boton"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/btn_recalcular"
            android:layout_width="373dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:layout_marginBottom="5sp"
            android:layout_weight="1"
            android:backgroundTint="@color/boton"
            android:text="@string/btnReCalc"
            android:textColor="@color/texto"
            android:textSize="20sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>