<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:verticalScrollbarPosition="defaultPosition"
    android:visibility="visible"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="370dp"
        android:layout_height="150dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.cardview.widget.CardView
            android:id="@+id/CardHombre"
            android:layout_width="175dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="10sp"
            app:cardBackgroundColor="@color/azul"
            app:cardCornerRadius="30dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txtHombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:textColor="@color/texto"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.495"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.765" />

                <ImageView
                    android:id="@+id/imagenHombre"
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.493"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.262"
                    app:srcCompat="@drawable/baseline_male_24" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/CardMujer"
            android:layout_width="175dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10sp"

            app:cardBackgroundColor="@color/azul"
            app:cardCornerRadius="30dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txtMujer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/woman"
                    android:textColor="@color/texto"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.785" />

                <ImageView
                    android:id="@+id/imagenMujer"
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.493"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.258"
                    app:srcCompat="@drawable/baseline_female_24" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="370dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            app:cardBackgroundColor="@color/azul"
            app:cardCornerRadius="30dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="362dp"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txtAltura"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/altura"
                    android:textColor="@color/texto"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.132" />

                <TextView
                    android:id="@+id/txtNumeroAltura"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="120 cm"
                    android:textColor="@color/texto"
                    android:textSize="35sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.38" />

                <com.google.android.material.slider.RangeSlider
                    android:id="@+id/barSAltura"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:stepSize="1"
                    android:valueFrom="120"
                    android:valueTo="200"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.826" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="370dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="60dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        app:layout_constraintVertical_bias="0.0">


        <androidx.cardview.widget.CardView
            android:layout_width="175dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            app:cardBackgroundColor="@color/azul"
            app:cardCornerRadius="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:id="@+id/txtPeso"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/peso"
                    android:textColor="@color/texto"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.15" />

                <TextView
                    android:id="@+id/txtPesoNumero"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="68"
                    android:textColor="@color/texto"
                    android:textSize="35sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.4" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/btnMenosPeso"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:backgroundTint="@color/boton"
                        android:contentDescription="TODO"
                        android:clickable="true"
                        android:focusable="true"
                        app:maxImageSize="40dp"
                        app:tint="@color/white"
                        app:fabSize="auto"
                        app:srcCompat="@drawable/sub" />

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/btnMaPeso"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_weight="1"
                        android:contentDescription="TODO"
                        android:backgroundTint="@color/boton"
                        android:clickable="true"
                        android:focusable="true"
                        app:maxImageSize="40dp"
                        app:tint="@color/white"
                        app:srcCompat="@drawable/plus" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="175dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            app:cardBackgroundColor="@color/azul"
            app:cardCornerRadius="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:id="@+id/txtEdad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/edad"
                    android:textColor="@color/texto"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.15" />

                <TextView
                    android:id="@+id/txtEdadNumero"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="32"
                    android:textColor="@color/texto"
                    android:textSize="35sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.4" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/botonMenosEdad"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:contentDescription="TODO"
                        android:focusable="true"
                        app:maxImageSize="40dp"
                        app:tint="@color/white"
                        android:backgroundTint="@color/boton"
                        app:srcCompat="@drawable/sub" />

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/botonMasEdad"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:focusable="true"
                        app:maxImageSize="40dp"
                        app:tint="@color/white"
                        android:backgroundTint="@color/boton"
                        app:srcCompat="@drawable/plus" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="370dp"
        android:layout_height="78dp"
        android:orientation="horizontal"
        android:layout_marginTop="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnCalcular"
            android:layout_width="383dp"
            android:layout_height="68dp"
            android:layout_weight="1"
            android:backgroundTint="@color/boton"
            android:text="@string/btnCalc"
            android:textColor="@color/texto"
            android:textSize="20sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>